# todd

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: array_parent.json  extreme.json  full.json  nested_objects.json  stripe_charges.json  zed_settings.json
logs/: app.log.2025-03-30-20  app.log.2025-03-31-06  app.log.2025-03-31-07  app.log.2025-03-31-10  app.log.2025-03-31-11
src/: actions.rs  app.rs  draw.rs  events.rs  main.rs
src/app/: events.rs  state.rs
src/ui/: draw.rs  helpers.rs  mod.rs
src/ui/views/: main_view.rs
src/ui/widgets/: text_input.rs
src/utils/: json.rs  logging.rs  mod.rs
src/views/: main_view.rs
src/widgets/: text_input.rs
